--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           <img class="bigphoto" src="images/pope05_gold_c.jpg" alt="image">
         </div>-->
       </div>
-      <p>Nakład: –, Stop: Au 999.9, Średnica: 11 mm, waga: 0.5g.<br>Cena: 500 sek</p>
+      <p>Nakład: 5000, Stop: Au 999.9, Średnica: 11 mm, waga: 0.5g.<br>Cena: 500 sek</p>
       <hr id="small_separator">
 
       <h4>2. Najmniejsze Złote Monety Świata, Pomnik Chrystusa Zbawiciela</h4>
@@ -759,7 +759,26 @@
       <p>Nakład: –, Stop: Ag 999.9 , Średnica: 45.60 mm, waga: 31,10g.<br>Cena: 550 sek</p>
       <hr id="silver_separator">
 
-      <h4>13. Australia 2$, Rok psa 2018
+      <h4>13. Australia 1$, Rok konia 2014
+      </h4>
+      <div class="row">
+        <div class="col-1">
+          <img class="photo" src="images/horse1_silver_a.jpg" alt="image">
+          <img class="bigphoto" src="images/horse1_silver_a.jpg" alt="image">
+        </div>
+        <div class="col-1">
+          <img class="photo" src="images/horse1_silver_b.jpg" alt="image">
+          <img class="bigphoto" src="images/horse1_silver_b.jpg" alt="image">
+        </div>
+        <div class="col-1">
+          <img class="photo" src="images/box3.jpg" alt="image">
+          <img class="bigphoto" src="images/box3.jpg" alt="image">
+        </div>
+      </div>
+      <p>Nakład: –, Stop: Ag 999.9 , Średnica: 45.60 mm, waga: 31,10g.<br>Cena: 700 sek</p>
+      <hr id="silver_separator">
+
+      <h4>14. Australia 2$, Rok psa 2018
       </h4>
       <div class="row">
         <div class="col-1">
@@ -778,7 +797,7 @@
       <p>Nakład: –, Stop: Ag 999.9 , Średnica: 55.60 mm, waga: 62,20g.<br>Cena: 1000 sek</p>
       <hr id="silver_separator">
 
-      <h4>14. Kolekcja 24 szt. Jan Paweł II
+      <h4>15. Kolekcja 24 szt. Jan Paweł II
       </h4>
       <div class="row">
         <div class="col-1">
