--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
   <!-- <div id="background"></div> -->
-  <!-- <div>
+  <!--<div>
     <div class="nav-contact">
       <a href="mailto:sebastian.strus1@gmail.com?subject=Mail from Numizmat site">
         <img class="contact_icon" src="images/z_koperta_white.png" alt="icon">
@@ -29,7 +29,7 @@
         <img id="fb_icon" class="contact_icon" src="images/fb_nice_logo.png" alt="icon">
       </a>
     </div>
-  </div> -->
+  </div>-->
   <h1 id="title">NUMIZMAT</h1>
   <hr id="big_gold_separator">
 
@@ -221,7 +221,7 @@
           <img class="bigphoto" src="images/pope_franks_gold_c.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: –, Stop: Au 999.9, Średnica: 13,92 mm, waga: 1/25 oz.<br>Cena: 1100 sek</p>
+      <p>Nakład: 2000, Stop: Au 999.9, Średnica: 13,92 mm, waga: 1/25 oz.<br>Cena: 1100 sek</p>
       <hr id="small_separator">
 
       <h4>7. Kanada, 50 centow kanadyjskich</h4>
@@ -813,7 +813,7 @@
           <img class="bigphoto" src="images/24pope_silver_c.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: -, Stop: Ag 500 , Średnica: 34,00 mm, waga: 24 * 15g.<br>Cena: 3000 sek</p>
+      <p>Nakład: -, Stop: Ag 500 , Średnica: 34,00 mm, waga: 24 * 15g.<br>Cena: 4500 sek</p>
       <hr id="silver_separator">
     </div>
   </div>
