Added Santo Subito description

--- a/index.html
+++ b/index.html
@@ -157,6 +157,10 @@
           <img class="photo" src="images/santosubito_gold_b.jpg" alt="image">
           <img class="bigphoto" src="images/santosubito_gold_b.jpg" alt="image">
         </div>
+        <div class="col-1">
+          <img class="photo" src="images/santosubito_gold_c.jpg" alt="image">
+          <img class="bigphoto" src="images/santosubito_gold_c.jpg" alt="image">
+        </div>
       </div>
       <p>Nakład: 14.000, Stop: Au 900, Średnica: 12 mm, waga: 1g.<br>Cena: 900 sek</p>
       <hr id="small_separator">
