--- a/index.html
+++ b/index.html
@@ -105,7 +105,13 @@
   <hr id="big_gold_separator">
 
 
-  <h5 id="welcome-text">Prezentowane monety są w stanie menniczym.<br>Zapraszam do kontaktu.</h5>
+  <h5 id="welcome-text">Metale szlachetne to doskonała inwestycja,<br>a także ciekawy prezent na wyjątkowe
+    okazje.<br>Średnia roczna stopa zwrotu z ostatnich 10 lat<br>wyniosła aż 23% rocznie. Jest to więc prezent,<br>który
+    dodatkowo zaprocentuje w przyszłości.<br>Pierwsza Komunia Święta, chrzest, ślub,<br>urodziny - to
+    okoliczności, które sprzyjają<br>ofiarowaniu prezentu ekskluzywnego.<br>Prezentowane monety są w stanie
+    menniczym.<br>Zapraszam
+    do
+    kontaktu.</h5>
 
   <div class="main">
     <div class="container section-gold">
