Updated Pope1991 coin image

--- a/index.html
+++ b/index.html
@@ -181,10 +181,6 @@
           <img class="photo" src="images/panda2016_gold_b.jpg" alt="image">
           <img class="bigphoto" src="images/panda2016_gold_b.jpg" alt="image">
         </div>
-        <div class="col-1">
-          <img class="photo" src="images/box3.jpg" alt="image">
-          <img class="bigphoto" src="images/box3.jpg" alt="image">
-        </div>
       </div>
       <p>Nakład: –, Stop: Au 999, Średnica: 16 mm, waga: 1g<br>Cena: 900 sek</p>
 
@@ -199,10 +195,6 @@
         <div class="col-1">
           <img class="photo" src="images/panda2017_gold_b.jpg" alt="image">
           <img class="bigphoto" src="images/panda2017_gold_b.jpg" alt="image">
-        </div>
-        <div class="col-1">
-          <img class="photo" src="images/box3.jpg" alt="image">
-          <img class="bigphoto" src="images/box3.jpg" alt="image">
         </div>
       </div>
       <p>Nakład: –, Stop: Au 999, Średnica: 16 mm, waga: 1g.<br>Cena: 900 sek</p>
@@ -333,10 +325,6 @@
         <div class="col-1">
           <img class="photo" src="images/kangur_gold_b.jpg" alt="image">
           <img class="bigphoto" src="images/kangur_gold_b.jpg" alt="image">
-        </div>
-        <div class="col-1">
-          <img class="photo" src="images/box1.jpg" alt="image">
-          <img class="bigphoto" src="images/box1.jpg" alt="image">
         </div>
       </div>
       <p>Nakład: –, Stop: Au 999, Średnica: 16,10 mm, waga: 3,11g.<br>Cena: 2500 sek</p>
@@ -626,10 +614,6 @@
           <img class="photo" src="images/lisc_silver_b.jpg" alt="image">
           <img class="bigphoto" src="images/lisc_silver_b.jpg" alt="image">
         </div>
-        <div class="col-1">
-          <img class="photo" src="images/box1.jpg" alt="image">
-          <img class="bigphoto" src="images/box1.jpg" alt="image">
-        </div>
       </div>
       <p>Nakład: –, Stop: Ag 999 , Średnica: 38 mm, waga: 31,10g.<br>Cena: 450 sek</p>
       <hr id="silver_separator">
@@ -647,10 +631,6 @@
         <div class="col-1">
           <img class="photo" src="images/pope10zl_silver_c.jpg" alt="image">
           <img class="bigphoto" src="images/pope10zl_silver_c.jpg" alt="image">
-        </div>
-        <div class="col-1">
-          <img class="photo" src="images/box3.jpg" alt="image">
-          <img class="bigphoto" src="images/box3.jpg" alt="image">
         </div>
       </div>
       <p>Nakład: 50.000, Stop: Ag 925 , Średnica: 32 mm, waga: 14,14g.<br>Cena: 450 sek</p>
@@ -694,6 +674,7 @@
       <hr id="silver_separator">
 
       <h4>8. Jan Paweł II - Jasna Góra 1991</h4>
+      <!-- Oryginalny duży srebrny medal kolekcjonerski, bity stemplem lustrzanym, w menniczym stanie zachowania, w bankowym kapslu ochronnym, wyprodukowana w mennicy Jana Krajewskiego Solidarity Mint w Kalifornii.  -->
       <div class="row">
         <div class="col-1">
           <img class="photo" src="images/pope1991_silver_a.jpg" alt="image">
@@ -775,10 +756,6 @@
           <img class="photo" src="images/dog1_silver_b.jpg" alt="image">
           <img class="bigphoto" src="images/dog1_silver_b.jpg" alt="image">
         </div>
-        <div class="col-1">
-          <img class="photo" src="images/box3.jpg" alt="image">
-          <img class="bigphoto" src="images/box3.jpg" alt="image">
-        </div>
       </div>
       <p>Nakład: –, Stop: Ag 999.9 , Średnica: 45.60 mm, waga: 31,10g.<br>Cena: 550 sek</p>
       <hr id="silver_separator">
@@ -794,10 +771,6 @@
           <img class="photo" src="images/horse1_silver_b.jpg" alt="image">
           <img class="bigphoto" src="images/horse1_silver_b.jpg" alt="image">
         </div>
-        <div class="col-1">
-          <img class="photo" src="images/box3.jpg" alt="image">
-          <img class="bigphoto" src="images/box3.jpg" alt="image">
-        </div>
       </div>
       <p>Nakład: –, Stop: Ag 999.9 , Średnica: 45.60 mm, waga: 31,10g.<br>Cena: 650 sek</p>
       <hr id="silver_separator">
@@ -812,10 +785,6 @@
         <div class="col-1">
           <img class="photo" src="images/dog2_silver_b.jpg" alt="image">
           <img class="bigphoto" src="images/dog2_silver_b.jpg" alt="image">
-        </div>
-        <div class="col-1">
-          <img class="photo" src="images/box3.jpg" alt="image">
-          <img class="bigphoto" src="images/box3.jpg" alt="image">
         </div>
       </div>
       <p>Nakład: –, Stop: Ag 999.9 , Średnica: 55.60 mm, waga: 62,20g.<br>Cena: 1100 sek</p>
