--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           <img class="bigphoto" src="images/pope05_gold_c.jpg" alt="image">
         </div>-->
       </div>
-      <p>Nakład: 5000, Stop: Au 999.9, Średnica: 11 mm, waga: 0.5g.<br>Cena: 500 sek</p>
+      <p>Nakład: 5.000, Stop: Au 999.9, Średnica: 11 mm, waga: 0.5g.<br>Cena: 500 sek</p>
       <hr id="small_separator">
 
       <h4>2. Najmniejsze Złote Monety Świata, Pomnik Chrystusa Zbawiciela</h4>
@@ -235,7 +235,7 @@
           <img class="bigphoto" src="images/pope_franks_gold_c.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: 2000, Stop: Au 999.9, Średnica: 13,92 mm, waga: 1/25 oz.<br>Cena: 1100 sek</p>
+      <p>Nakład: 2.000, Stop: Au 999.9, Średnica: 13,92 mm, waga: 1/25 oz.<br>Cena: 1100 sek</p>
       <hr id="small_separator">
 
       <h4>8. Kanada, 50 centow kanadyjskich</h4>
@@ -293,7 +293,7 @@
           <img class="bigphoto" src="images/10dJPII_gold_d.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: 1000, Stop: Au 999.9, Średnica: 14,1 mm, waga: 1,24g.<br>Cena: 1500 sek</p>
+      <p>Nakład: 1.000, Stop: Au 999.9, Średnica: 14,1 mm, waga: 1,24g.<br>Cena: 1500 sek</p>
       <hr id="small_separator">
 
       <h4>11. 37 zł / 2009 r. - Ksiądz Jerzy Popiełuszko</h4>
@@ -443,7 +443,7 @@
           <img class="bigphoto" src="images/100dmowski_gold_c.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: 2000, Stop: Au 900, Średnica: 21 mm, waga: 8g.<br>Cena: 7000 sek</p>
+      <p>Nakład: 2.00, Stop: Au 900, Średnica: 21 mm, waga: 8g.<br>Cena: 7000 sek</p>
       <hr id="small_separator">
 
       <h4>19. Skarbnica Narodowa – Siedem cudów świata</h4>
@@ -477,7 +477,7 @@
           <img class="bigphoto" src="images/200zl_JPII1998_gold_c.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: 5000, Stop: Au 900, Średnica: 27 mm, waga: 1/2 oz.<br>Cena: 10300 sek</p>
+      <p>Nakład: 5.000, Stop: Au 900, Średnica: 27 mm, waga: 1/2 oz.<br>Cena: 10300 sek</p>
       <hr id="small_separator">
 
 
@@ -599,7 +599,7 @@
           <img class="bigphoto" src="images/box3.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: 100 000, Stop: Ag 925 , Średnica: 32 mm, waga: 14,14g.<br>Cena: 300 sek</p>
+      <p>Nakład: 100.000, Stop: Ag 925 , Średnica: 32 mm, waga: 14,14g.<br>Cena: 300 sek</p>
       <hr id="silver_separator">
 
       <h4>4. Kanada, 5 Dolarów 2011 - Liść Klonowy (1 oz. Ag999.9)</h4>
