--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
   <!-- <div id="background"></div> -->
-  <!--<div>
+  <div>
     <div class="nav-contact">
       <a href="mailto:sebastian.strus1@gmail.com?subject=Mail from Numizmat site">
         <img class="contact_icon" src="images/z_koperta_white.png" alt="icon">
@@ -29,7 +29,7 @@
         <img id="fb_icon" class="contact_icon" src="images/fb_nice_logo.png" alt="icon">
       </a>
     </div>
-  </div>-->
+  </div>
   <h1 id="title">NUMIZMAT</h1>
   <hr id="big_gold_separator">
 
