--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
       <p>Nakład: 14.000, Stop: Au 900, Średnica: 12 mm, waga: 1g.<br>Cena: 900 sek</p>
       <hr id="small_separator">
 
-      <h4>4. Złota Moneta – Chińska Panda, 10 yuanów 2016</h4>
+      <!--<h4>4. Złota Moneta – Chińska Panda, 10 yuanów 2016</h4>
       <div class="row">
         <div class="col-1">
           <img class="photo" src="images/panda2016_gold_a.jpg" alt="image">
@@ -196,9 +196,9 @@
         </div>
       </div>
       <p>Nakład: –, Stop: Au 999, Średnica: 16 mm, waga: 1g.<br>Cena: 900 sek</p>
-      <hr id="small_separator">
+      <hr id="small_separator">-->
 
-      <h4>6. Fryderyk Chopin, 2 dolary nowozelandzkie</h4>
+      <h4>4. Fryderyk Chopin, 2 dolary nowozelandzkie</h4>
       <div class="row">
         <div class="col-1">
           <img class="photo" src="images/chopin_gold_a.jpg" alt="image">
@@ -220,7 +220,7 @@
       <p>Nakład: 10.000, Stop: Au 900, Średnica: 12 mm, waga: 1g.<br>Cena: 900 sek</p>
       <hr id="small_separator">
 
-      <h4>7. SN1313 20 Franków 2003 rok Kongo Jan Paweł II</h4>
+      <h4>5. SN1313 20 Franków 2003 rok Kongo Jan Paweł II</h4>
       <div class="row">
         <div class="col-1">
           <img class="photo" src="images/pope_franks_gold_a.jpg" alt="image">
@@ -238,7 +238,7 @@
       <p>Nakład: 2.000, Stop: Au 999.9, Średnica: 13,92 mm, waga: 1/25 oz.<br>Cena: 1100 sek</p>
       <hr id="small_separator">
 
-      <h4>8. Kanada, 50 centow kanadyjskich</h4>
+      <h4>6. Kanada, 50 centow kanadyjskich</h4>
       <div class="row">
         <div class="col-1">
           <img class="photo" src="images/maples_gold_a.jpg" alt="image">
@@ -256,7 +256,7 @@
       <p>Nakład: –, Stop: Au 999.9, Średnica: 13.92 mm, waga: 1.24g.<br>Cena: 1100 sek</p>
       <hr id="small_separator">
 
-      <h4>9. 25 zł Beatyfikacja Jana Pawła II – 1 V 2011</h4>
+      <h4>7. 25 zł Beatyfikacja Jana Pawła II – 1 V 2011</h4>
       <div class="row">
         <div class="col-1">
           <img class="photo" src="images/papiez_gold_a.jpg" alt="image">
@@ -274,7 +274,7 @@
       <p>Nakład: 10.000, Stop: Au 900, Średnica: 12,00 mm, waga: 1g.<br>Cena: 1400 sek</p>
       <hr id="small_separator">
 
-      <h4>10. 10 dolarów nowozelandzkich, Jan Paweł II 2006</h4>
+      <h4>8. 10 dolarów nowozelandzkich, Jan Paweł II 2006</h4>
       <div class="row">
         <div class="col-1">
           <img class="photo" src="images/10dJPII_gold_a.jpg" alt="image">
@@ -296,7 +296,7 @@
       <p>Nakład: 1.000, Stop: Au 999.9, Średnica: 14,1 mm, waga: 1,24g.<br>Cena: 1500 sek</p>
       <hr id="small_separator">
 
-      <h4>11. 37 zł / 2009 r. - Ksiądz Jerzy Popiełuszko</h4>
+      <h4>9. 37 zł / 2009 r. - Ksiądz Jerzy Popiełuszko</h4>
       <div class="row">
         <div class="col-1">
           <img class="photo" src="images/37zl_gold_a.jpg" alt="image">
@@ -314,7 +314,7 @@
       <p>Nakład: 60.000, Stop: Au 900, Średnica: 16 mm, waga: 1,7g.<br>Cena: 1500 sek</p>
       <hr id="small_separator">
 
-      <h4>12. Australijski Kangur 1/10 uncji złota</h4>
+      <!--<h4>12. Australijski Kangur 1/10 uncji złota</h4>
       <div class="row">
         <div class="col-1">
           <img class="photo" src="images/kangur_gold_a.jpg" alt="image">
@@ -326,9 +326,9 @@
         </div>
       </div>
       <p>Nakład: –, Stop: Au 999, Średnica: 16,10 mm, waga: 3,11g.<br>Cena: 2500 sek</p>
-      <hr id="small_separator">
+      <hr id="small_separator">-->
 
-      <h4>13. 50 zł, Orzeł Bielik (pierwszy rocznik) 1/10oz</h4>
+      <h4>10. 50 zł, Orzeł Bielik (pierwszy rocznik) 1/10oz</h4>
       <div class="row">
         <div class="col-1">
           <img class="photo" src="images/bielik_gold_a.jpg" alt="image">
@@ -350,7 +350,7 @@
       <p>Nakład: –, Stop: Au 999.9 , Średnica: 18 mm, waga: 3,11g.<br>Cena: 3200 sek</p>
       <hr id="small_separator">
 
-      <h4>14. Złota Moneta 100 ZŁ Jan Paweł II 2005r.</h4>
+      <h4>11. Złota Moneta 100 ZŁ Jan Paweł II 2005r.</h4>
       <div class="row">
         <div class="col-1">
           <img class="photo" src="images/papiez2005_gold_a.jpg" alt="image">
@@ -368,7 +368,7 @@
       <p>Nakład: 18.700, Stop: Au 900, Średnica: 21 mm, waga: 8g.<br>Cena: 5400 sek</p>
       <hr id="small_separator">
 
-      <h4>15. Złota Moneta 100 ZŁ Beatyfikacja Jana Pawła II</h4>
+      <h4>12. Złota Moneta 100 ZŁ Beatyfikacja Jana Pawła II</h4>
       <div class="row">
         <div class="col-1">
           <img class="photo" src="images/beatyfikacja_gold_a.jpg" alt="image">
@@ -390,7 +390,7 @@
       <p>Nakład: 8.000, Stop: Au 900, Średnica: 21 mm, waga: 8g.<br>Cena: 5700 sek</p>
       <hr id="small_separator">
 
-      <h4>16. Złota Moneta 100 ZŁ Kanonizacja Jana Pawła II</h4>
+      <h4>13. Złota Moneta 100 ZŁ Kanonizacja Jana Pawła II</h4>
       <div class="row">
         <div class="col-1">
           <img class="photo" src="images/kanonizacja_gold_a.jpg" alt="image">
@@ -408,7 +408,7 @@
       <p>Nakład: 5.000, Stop: Au 900, Średnica: 21 mm, waga: 8g.<br>Cena: 6000 sek</p>
       <hr id="small_separator">
 
-      <h4>17. Niue 10 Dolarów 2018, Roman Dmowski, 100-lecie niepodległości Polski</h4>
+      <h4>14. Niue 10 Dolarów 2018, Roman Dmowski, 100-lecie niepodległości Polski</h4>
       <div class="row">
         <div class="col-1">
           <img class="photo" src="images/dmowski_gold_a.jpg" alt="image">
@@ -429,7 +429,7 @@
       <p>Nakład: 500, Stop: Au 999, Średnica: 21 mm, waga: 7,78g.<br>Cena: 6000 sek</p>
       <hr id="small_separator">
 
-      <h4>18. Złota Moneta 100 zł Roman Dmowski 2017</h4>
+      <h4>15. Złota Moneta 100 zł Roman Dmowski 2017</h4>
       <div class="row">
         <div class="col-1">
           <img class="photo" src="images/100dmowski_gold_a.jpg" alt="image">
@@ -443,10 +443,10 @@
           <img class="bigphoto" src="images/100dmowski_gold_c.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: 2.00, Stop: Au 900, Średnica: 21 mm, waga: 8g.<br>Cena: 7000 sek</p>
+      <p>Nakład: 2.000, Stop: Au 900, Średnica: 21 mm, waga: 8g.<br>Cena: 7000 sek</p>
       <hr id="small_separator">
 
-      <h4>19. Skarbnica Narodowa – Siedem cudów świata</h4>
+      <h4>16. Skarbnica Narodowa – Siedem cudów świata</h4>
       <div class="row">
         <div class="col-1">
           <img class="photo" src="images/7_cudow_gold_a.jpg" alt="image">
@@ -463,7 +463,7 @@
       <p>Nakład: –, Stop: Au 999, Średnica: 16 mm, waga: 7 * 1g.<br>Cena: 7100 sek</p>
       <hr id="small_separator">
 
-      <h4>20. Złota Moneta 200 zł Jan Paweł II - 20-lecie pontyfikatu 1998</h4>
+      <h4>17. Złota Moneta 200 zł Jan Paweł II - 20-lecie pontyfikatu 1998</h4>
       <div class="row">
         <div class="col-1">
           <img class="photo" src="images/200zl_JPII1998_gold_a.jpg" alt="image">
@@ -576,10 +576,10 @@
           <img class="photo" src="images/pontifex_silver_b.jpg" alt="image">
           <img class="bigphoto" src="images/pontifex_silver_b.jpg" alt="image">
         </div>
-        <div class="col-1">
+        <!-- <div class="col-1">
           <img class="photo" src="images/box1.jpg" alt="image">
           <img class="bigphoto" src="images/box1.jpg" alt="image">
-        </div>
+        </div> -->
       </div>
       <p>Nakład: 80.000, Stop: Ag 925 , Średnica: 32 mm, waga: 14,14g.<br>Cena: 300 sek</p>
       <hr id="silver_separator">
@@ -594,10 +594,10 @@
           <img class="photo" src="images/popieluszko_silver_b.jpg" alt="image">
           <img class="bigphoto" src="images/popieluszko_silver_b.jpg" alt="image">
         </div>
-        <div class="col-1">
+        <!-- <div class="col-1">
           <img class="photo" src="images/box3.jpg" alt="image">
           <img class="bigphoto" src="images/box3.jpg" alt="image">
-        </div>
+        </div> -->
       </div>
       <p>Nakład: 100.000, Stop: Ag 925 , Średnica: 32 mm, waga: 14,14g.<br>Cena: 300 sek</p>
       <hr id="silver_separator">
