--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- <div id="background"></div> -->
   <div>
     <div class="nav-contact">
-      <a href="mailto:sebastian.strus1@gmail.com?subject=Mail from Numizmat site">
+      <a href="mailto:poczta@numizmat.se?subject=Mail from Numizmat site">
         <img class="contact_icon" src="images/z_koperta_white.png" alt="icon">
         <p id="email_address">poczta@numizmat.se</p>
       </a>
