--- a/index.html
+++ b/index.html
@@ -428,24 +428,24 @@
       <p>Nakład: 500, Stop: Au 999, Średnica: 21 mm, waga: 7,78g.<br>Cena: 6000 sek</p>
       <hr id="small_separator">
 
-      <<!--h4>15. Złota Moneta 100 zł Roman Dmowski 2017</h4>
-        <div class="row">
-          <div class="col-1">
-            <img class="photo" src="images/100dmowski_gold_a.jpg" alt="image">
-            <img class="bigphoto" src="images/100dmowski_gold_a.jpg" alt="image"> </div>
-          <div class="col-1">
-            <img class="photo" src="images/100dmowski_gold_b.jpg" alt="image">
-            <img class="bigphoto" src="images/100dmowski_gold_b.jpg" alt="image">
-          </div>
-          <div class="col-1">
-            <img class="photo" src="images/100dmowski_gold_c.jpg" alt="image">
-            <img class="bigphoto" src="images/100dmowski_gold_c.jpg" alt="image">
-          </div>
+      <h4>15. Złota Moneta 100 zł Roman Dmowski 2017</h4>
+      <div class="row">
+        <div class="col-1">
+          <img class="photo" src="images/100dmowski_gold_a.jpg" alt="image">
+          <img class="bigphoto" src="images/100dmowski_gold_a.jpg" alt="image"> </div>
+        <div class="col-1">
+          <img class="photo" src="images/100dmowski_gold_b.jpg" alt="image">
+          <img class="bigphoto" src="images/100dmowski_gold_b.jpg" alt="image">
         </div>
-        <p>Nakład: 2.000, Stop: Au 900, Średnica: 21 mm, waga: 8g.<br>Cena: 7000 sek</p>
-        <hr id="small_separator">-->
+        <div class="col-1">
+          <img class="photo" src="images/100dmowski_gold_c.jpg" alt="image">
+          <img class="bigphoto" src="images/100dmowski_gold_c.jpg" alt="image">
+        </div>
+      </div>
+      <p>Nakład: 2.000, Stop: Au 900, Średnica: 21 mm, waga: 8g.<br>Cena: 7000 sek</p>
+      <hr id="small_separator">
 
-        <!--<h4>16. Skarbnica Narodowa – Siedem cudów świata</h4>
+      <h4>16. Skarbnica Narodowa – Siedem cudów świata</h4>
       <div class="row">
         <div class="col-1">
           <img class="photo" src="images/7_cudow_gold_a.jpg" alt="image">
@@ -460,27 +460,27 @@
         </div>
       </div>
       <p>Nakład: –, Stop: Au 999, Średnica: 16 mm, waga: 7 * 1g.<br>Cena: 7100 sek</p>
-      <hr id="small_separator">-->
+      <hr id="small_separator">
 
-        <h4>15. Złota Moneta 200 zł Jan Paweł II - 20-lecie pontyfikatu 1998</h4>
-        <div class="row">
-          <div class="col-1">
-            <img class="photo" src="images/200zl_JPII1998_gold_a.jpg" alt="image">
-            <img class="bigphoto" src="images/200zl_JPII1998_gold_a.jpg" alt="image"> </div>
-          <div class="col-1">
-            <img class="photo" src="images/200zl_JPII1998_gold_b.jpg" alt="image">
-            <img class="bigphoto" src="images/200zl_JPII1998_gold_b.jpg" alt="image">
-          </div>
-          <div class="col-1">
-            <img class="photo" src="images/200zl_JPII1998_gold_c.jpg" alt="image">
-            <img class="bigphoto" src="images/200zl_JPII1998_gold_c.jpg" alt="image">
-          </div>
+      <h4>17. Złota Moneta 200 zł Jan Paweł II - 20-lecie pontyfikatu 1998</h4>
+      <div class="row">
+        <div class="col-1">
+          <img class="photo" src="images/200zl_JPII1998_gold_a.jpg" alt="image">
+          <img class="bigphoto" src="images/200zl_JPII1998_gold_a.jpg" alt="image"> </div>
+        <div class="col-1">
+          <img class="photo" src="images/200zl_JPII1998_gold_b.jpg" alt="image">
+          <img class="bigphoto" src="images/200zl_JPII1998_gold_b.jpg" alt="image">
         </div>
-        <p>Nakład: 5.000, Stop: Au 900, Średnica: 27 mm, waga: 1/2 oz.<br>Cena: 10300 sek</p>
-        <hr id="small_separator">
+        <div class="col-1">
+          <img class="photo" src="images/200zl_JPII1998_gold_c.jpg" alt="image">
+          <img class="bigphoto" src="images/200zl_JPII1998_gold_c.jpg" alt="image">
+        </div>
+      </div>
+      <p>Nakład: 5.000, Stop: Au 900, Średnica: 27 mm, waga: 1/2 oz.<br>Cena: 10300 sek</p>
+      <hr id="small_separator">
 
 
-        <!-- <h4>17. Złota Moneta 200 zł Jan Paweł II, 2002</h4>
+      <!-- <h4>17. Złota Moneta 200 zł Jan Paweł II, 2002</h4>
       <div class="row">
         <div class="col-1">
           <img class="photo" src="images/200zl_JPII_2002_gold_a.jpg" alt="image">
@@ -497,7 +497,7 @@
       <p>Nakład: 5 000, Stop: Au 900, Średnica: 27 mm, waga: 1/2 oz</p>
       <hr id="small_separator"> -->
 
-        <!--<h4>18. Złota Moneta 200 zł Jan Paweł II - 25-lecie pontyfikatu 2003</h4>
+      <!--<h4>18. Złota Moneta 200 zł Jan Paweł II - 25-lecie pontyfikatu 2003</h4>
       <div class="row">
         <div class="col-1">
           <img class="photo" src="images/200zl_JPII_gold_a.jpg" alt="image">
@@ -514,7 +514,7 @@
       <p>Nakład: 4900, Stop: Au 900, Średnica: 27 mm, waga: 1/2 oz</p>
       <hr id="small_separator">-->
 
-        <!--<h3>11. Jan Paweł II, Pontifex Maximus, 200 zł 2002</h3>
+      <!--<h3>11. Jan Paweł II, Pontifex Maximus, 200 zł 2002</h3>
       <div class="row">
         <div class="col-md-2">
           <img class="photo" src="images/11a.jpg" alt="image">
@@ -528,7 +528,7 @@
       </div>
       <p>Nakład: 5 000, Stop: Au 900 , Średnica: 27 mm, waga: 15,5g</p>-->
 
-        <!--<h3>12. Moneta 10 zł Kanonizacja Jana Pawła II</h3>
+      <!--<h3>12. Moneta 10 zł Kanonizacja Jana Pawła II</h3>
       <div class="row">
         <div class="col-md-2">
           <img class="photo" src="images/12a.jpg" alt="image">
@@ -787,7 +787,7 @@
       <p>Nakład: –, Stop: Ag 999.9 , Średnica: 55.60 mm, waga: 62,20g.<br>Cena: 1100 sek</p>
       <hr id="silver_separator">
 
-      <!--<h4>15. Kolekcja 24 szt. Jan Paweł II
+      <h4>15. Kolekcja 24 szt. Jan Paweł II
       </h4>
       <div class="row">
         <div class="col-1">
@@ -804,7 +804,7 @@
         </div>
       </div>
       <p>Nakład: -, Stop: Ag 500 , Średnica: 34,00 mm, waga: 24 * 15g.<br>Cena: 4500 sek</p>
-      <hr id="silver_separator">-->
+      <hr id="silver_separator">
     </div>
   </div>
 
