--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
     okazje.<br>Średnia roczna stopa zwrotu z ostatnich 20 lat<br>wyniosła aż 10% rocznie. Jest to więc prezent,<br>który
     dodatkowo zaprocentuje w przyszłości.<br>Pierwsza Komunia Święta, chrzest, ślub,<br>urodziny - to
     okoliczności, które sprzyjają<br>ofiarowaniu prezentu ekskluzywnego.<br>Zapraszam do kontaktu.</h5>
+  <h5 id="welcome_message" class="new_price animate-flicker">Uwaga. Wyprzedaż świąteczna!</h5>
 
   <div class="main">
     <div class="container section-gold">
@@ -129,7 +130,8 @@
           <img class="bigphoto" src="images/pope05_gold_c.jpg" alt="image">
         </div>-->
       </div>
-      <p>Nakład: 5.000, Stop: Au 999.9, Średnica: 11 mm, waga: 0.5g.<br>Cena: 500 sek</p>
+      <p>Nakład: 5.000, Stop: Au 999.9, Średnica: 11 mm, waga: 0.5g.</p>
+      <p>Cena: 500 sek</p>
       <hr id="small_separator">
 
       <h4>2. Najmniejsze Złote Monety Świata, Pomnik Chrystusa Zbawiciela</h4>
@@ -147,7 +149,8 @@
           <img class="bigphoto" src="images/jezus_gold_c.jpg" alt="image">
         </div>-->
       </div>
-      <p>Nakład: –, Stop: Au 917, Średnica: 16 mm, waga: 1g.<br>Cena: 800 sek</p>
+      <p>Nakład: –, Stop: Au 917, Średnica: 16 mm, waga: 1g.</p>
+      <p>Cena: 800 sek</p>
       <hr id="small_separator">
 
       <h4>3. Jan Paweł II – Santo Subito</h4>
@@ -165,7 +168,8 @@
           <img class="bigphoto" src="images/santosubito_gold_c.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: 14.000, Stop: Au 900, Średnica: 12 mm, waga: 1g.<br>Cena: 900 sek</p>
+      <p>Nakład: 14.000, Stop: Au 900, Średnica: 12 mm, waga: 1g.</p>
+      <p>Cena: 900 sek</p>
       <hr id="small_separator">
 
       <!--<h4>4. Złota Moneta – Chińska Panda, 10 yuanów 2016</h4>
@@ -216,7 +220,8 @@
           <img class="bigphoto" src="images/chopin_gold_d.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: 10.000, Stop: Au 900, Średnica: 12 mm, waga: 1g.<br>Cena: 900 sek</p>
+      <p>Nakład: 10.000, Stop: Au 900, Średnica: 12 mm, waga: 1g.</p>
+      <p>Cena: 900 sek</p>
       <hr id="small_separator">
 
       <h4>5. SN1313 20 Franków 2003 rok Kongo Jan Paweł II</h4>
@@ -234,7 +239,8 @@
           <img class="bigphoto" src="images/pope_franks_gold_c.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: 2.000, Stop: Au 999.9, Średnica: 13,92 mm, waga: 1/25 oz.<br>Cena: 1100 sek</p>
+      <p>Nakład: 2.000, Stop: Au 999.9, Średnica: 13,92 mm, waga: 1/25 oz.</p>
+      <p>Cena: 1100 sek</p>
       <hr id="small_separator">
 
       <h4>6. Kanada, 50 centow kanadyjskich</h4>
@@ -252,7 +258,8 @@
           <img class="bigphoto" src="images/maples_gold_c.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: –, Stop: Au 999.9, Średnica: 13.92 mm, waga: 1.24g.<br>Cena: 1100 sek</p>
+      <p>Nakład: –, Stop: Au 999.9, Średnica: 13.92 mm, waga: 1.24g.</p>
+      <p>Cena: 1100 sek</p>
       <hr id="small_separator">
 
       <h4>7. 25 zł Beatyfikacja Jana Pawła II – 1 V 2011</h4>
@@ -270,7 +277,8 @@
           <img class="bigphoto" src="images/papiez_gold_c.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: 10.000, Stop: Au 900, Średnica: 12,00 mm, waga: 1g.<br>Cena: 1400 sek</p>
+      <p>Nakład: 10.000, Stop: Au 900, Średnica: 12,00 mm, waga: 1g.</p>
+      <p>Cena: <span class="old_price">1500 sek</span> <span class="new_price">1300 sek</span></p>
       <hr id="small_separator">
 
       <h4>8. 10 dolarów nowozelandzkich, Jan Paweł II 2006</h4>
@@ -292,7 +300,8 @@
           <img class="bigphoto" src="images/10dJPII_gold_d.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: 1.000, Stop: Au 999.9, Średnica: 14,1 mm, waga: 1,24g.<br>Cena: 1500 sek</p>
+      <p>Nakład: 1.000, Stop: Au 999.9, Średnica: 14,1 mm, waga: 1,24g.</p>
+      <p>Cena: 1500 sek</p>
       <hr id="small_separator">
 
       <h4>9. 37 zł / 2009 r. - Ksiądz Jerzy Popiełuszko</h4>
@@ -310,7 +319,8 @@
           <img class="bigphoto" src="images/37zl_gold_c.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: 60.000, Stop: Au 900, Średnica: 16 mm, waga: 1,7g.<br>Cena: 1500 sek</p>
+      <p>Nakład: 60.000, Stop: Au 900, Średnica: 16 mm, waga: 1,7g.</p>
+      <p>Cena: <span class="old_price">1500 sek</span> <span class="new_price">1300 sek</span></p>
       <hr id="small_separator">
 
       <!--<h4>12. Australijski Kangur 1/10 uncji złota</h4>
@@ -346,7 +356,8 @@
           <img class="bigphoto" src="images/box3.jpg" alt="image">
         </div>-->
       </div>
-      <p>Nakład: –, Stop: Au 999.9 , Średnica: 18 mm, waga: 3,11g.<br>Cena: 3200 sek</p>
+      <p>Nakład: –, Stop: Au 999.9 , Średnica: 18 mm, waga: 3,11g.</p>
+      <p>Cena: 3200 sek</p>
       <hr id="small_separator">
 
       <h4>11. Złota Moneta 100 ZŁ Jan Paweł II 2005r.</h4>
@@ -364,7 +375,8 @@
           <img class="bigphoto" src="images/papiez2005_gold_c.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: 18.700, Stop: Au 900, Średnica: 21 mm, waga: 8g.<br>Cena: 5400 sek</p>
+      <p>Nakład: 18.700, Stop: Au 900, Średnica: 21 mm, waga: 8g.</p>
+      <p>Cena: <span class="old_price">5600 sek</span> <span class="new_price">5300 sek</span></p>
       <hr id="small_separator">
 
       <h4>12. Złota Moneta 100 ZŁ Beatyfikacja Jana Pawła II</h4>
@@ -386,7 +398,8 @@
           <img class="bigphoto" src="images/beatyfikacja_gold_d.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: 8.000, Stop: Au 900, Średnica: 21 mm, waga: 8g.<br>Cena: 5700 sek</p>
+      <p>Nakład: 8.000, Stop: Au 900, Średnica: 21 mm, waga: 8g.</p>
+      <p>Cena: 5700 sek</p>
       <hr id="small_separator">
 
       <h4>13. Złota Moneta 100 ZŁ Kanonizacja Jana Pawła II</h4>
@@ -404,7 +417,8 @@
           <img class="bigphoto" src="images/kanonizacja_gold_c.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: 5.000, Stop: Au 900, Średnica: 21 mm, waga: 8g.<br>Cena: 6000 sek</p>
+      <p>Nakład: 5.000, Stop: Au 900, Średnica: 21 mm, waga: 8g.</p>
+      <p>Cena: 6000 sek <span class="new_price"> Rzadka!</span></p>
       <hr id="small_separator">
 
       <h4>14. Niue 10 Dolarów 2018, Roman Dmowski, 100-lecie niepodległości Polski</h4>
@@ -425,7 +439,8 @@
           <img class="bigphoto" src="images/dmowski_gold_d.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: 500, Stop: Au 999, Średnica: 21 mm, waga: 7,78g.<br>Cena: 6000 sek</p>
+      <p>Nakład: 500, Stop: Au 999, Średnica: 21 mm, waga: 7,78g.</p>
+      <p>Cena: 6000 sek</p>
       <hr id="small_separator">
 
       <h4>15. Złota Moneta 100 zł Roman Dmowski 2017</h4>
@@ -442,7 +457,8 @@
           <img class="bigphoto" src="images/100dmowski_gold_c.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: 2.000, Stop: Au 900, Średnica: 21 mm, waga: 8g.<br>Cena: 7000 sek</p>
+      <p>Nakład: 2.000, Stop: Au 900, Średnica: 21 mm, waga: 8g.</p>
+      <p>Cena: 7000 sek <span class="new_price">Jedyna w internecie!</span></p>
       <hr id="small_separator">
 
       <h4>16. Skarbnica Narodowa – Siedem cudów świata</h4>
@@ -459,7 +475,8 @@
           <img class="bigphoto" src="images/7_cudow_gold_c.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: –, Stop: Au 999, Średnica: 16 mm, waga: 7 * 1g.<br>Cena: 7100 sek</p>
+      <p>Nakład: –, Stop: Au 999, Średnica: 16 mm, waga: 7 * 1g.<b /p>
+          <pr>Cena: 7100 sek</p>
       <hr id="small_separator">
 
       <h4>17. Złota Moneta 200 zł Jan Paweł II - 20-lecie pontyfikatu 1998</h4>
@@ -476,7 +493,8 @@
           <img class="bigphoto" src="images/200zl_JPII1998_gold_c.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: 5.000, Stop: Au 900, Średnica: 27 mm, waga: 1/2 oz.<br>Cena: 10300 sek</p>
+      <p>Nakład: 5.000, Stop: Au 900, Średnica: 27 mm, waga: 1/2 oz.</p>
+      <p>Cena: <span class="old_price">11000 sek</span> <span class="new_price">10000 sek</span></p>
       <hr id="small_separator">
 
 
@@ -561,7 +579,8 @@
           <img class="bigphoto" src="images/box3.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: 10.000, Stop: Ag 500 , Średnica: 34 mm, waga: 15g.<br>Cena: 200 sek</p>
+      <p>Nakład: 10.000, Stop: Ag 500 , Średnica: 34 mm, waga: 15g.</p>
+      <p>Cena: 200 sek</p>
       <hr id="silver_separator">
 
       <h4>2. Jan Paweł II – 10 zł 2002</h4>
@@ -580,7 +599,8 @@
           <img class="bigphoto" src="images/box1.jpg" alt="image">
         </div> -->
       </div>
-      <p>Nakład: 80.000, Stop: Ag 925 , Średnica: 32 mm, waga: 14,14g.<br>Cena: 300 sek</p>
+      <p>Nakład: 80.000, Stop: Ag 925 , Średnica: 32 mm, waga: 14,14g.</p>
+      <p>Cena: 300 sek</p>
       <hr id="silver_separator">
 
       <h4>3. Jerzy Popiełuszko – 10 zł 2009</h4>
@@ -598,7 +618,8 @@
           <img class="bigphoto" src="images/box3.jpg" alt="image">
         </div> -->
       </div>
-      <p>Nakład: 100.000, Stop: Ag 925 , Średnica: 32 mm, waga: 14,14g.<br>Cena: 300 sek</p>
+      <p>Nakład: 100.000, Stop: Ag 925 , Średnica: 32 mm, waga: 14,14g.</p>
+      <p>Cena: 300 sek</p>
       <hr id="silver_separator">
 
       <h4>4. Kanada, 5 Dolarów 2011 - Liść Klonowy (1 oz. Ag999.9)</h4>
@@ -612,7 +633,8 @@
           <img class="bigphoto" src="images/lisc_silver_b.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: –, Stop: Ag 999 , Średnica: 38 mm, waga: 31,10g.<br>Cena: 450 sek</p>
+      <p>Nakład: –, Stop: Ag 999 , Średnica: 38 mm, waga: 31,10g.</p>
+      <p>Cena: 450 sek</p>
       <hr id="silver_separator">
 
       <h4>5. Moneta 10 zł Kanonizacja Jana Pawła II</h4>
@@ -630,7 +652,8 @@
           <img class="bigphoto" src="images/pope10zl_silver_c.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: 50.000, Stop: Ag 925 , Średnica: 32 mm, waga: 14,14g.<br>Cena: 450 sek</p>
+      <p>Nakład: 50.000, Stop: Ag 925 , Średnica: 32 mm, waga: 14,14g.</p>
+      <p>Cena: 450 sek</p>
       <hr id="silver_separator">
 
       <h4>6. 10 zł Roman Dmowski Stulecie odzyskania przez Polskę niepodległości</h4>
@@ -648,7 +671,8 @@
           <img class="bigphoto" src="images/dmowski_silver_c.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: 20.000, Stop: Ag 925 , Wymiary: 32 X 22,4 mm, waga: 14,14g.<br>Cena: 450 sek</p>
+      <p>Nakład: 20.000, Stop: Ag 925 , Wymiary: 32 X 22,4 mm, waga: 14,14g.</p>
+      <p>Cena: 450 sek</p>
       <hr id="silver_separator">
 
 
@@ -667,7 +691,8 @@
           <img class="bigphoto" src="images/pope20zl_silver_c.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: 80.000, Stop: Ag 925 , Średnica: 38,61 mm, waga: 28,40g.<br>Cena: 400 sek</p>
+      <p>Nakład: 80.000, Stop: Ag 925 , Średnica: 38,61 mm, waga: 28,40g.</p>
+      <p>Cena: 400 sek</p>
       <hr id="silver_separator">
 
       <h4>8. Jan Paweł II - Jasna Góra 1991</h4>
@@ -682,7 +707,8 @@
           <img class="bigphoto" src="images/pope1991_silver_b.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: –, Stop: Ag 999, Średnica: 39 mm, waga: 31,1g.<br>Cena: 500 sek</p>
+      <p>Nakład: –, Stop: Ag 999, Średnica: 39 mm, waga: 31,1g.</p>
+      <p>Cena: 500 sek</p>
       <hr id="silver_separator">
 
       <h4>9. 10 dolarów kanadyjskich 2014 – Kanonizacja Jana Pawła II
@@ -701,7 +727,8 @@
           <img class="bigphoto" src="images/10d_jpii_silver_c.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: 8.500, Stop: Ag 999, Średnica: 36,07 mm, waga: 23,17g.<br>Cena: 600 sek</p>
+      <p>Nakład: 8.500, Stop: Ag 999, Średnica: 36,07 mm, waga: 23,17g.</p>
+      <p>Cena: 600 sek</p>
       <hr id="silver_separator">
 
       <h4>10. 10 złotych 2017, Żołnierze Niezłomni, Danuta Siedzikówna ps. „Inka”
@@ -720,7 +747,8 @@
           <img class="bigphoto" src="images/inka_silver_c.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: 17.000, Stop: Ag 925 , Średnica: 32,00 mm, waga: 14,14g.<br>Cena: 600 sek</p>
+      <p>Nakład: 17.000, Stop: Ag 925 , Średnica: 32,00 mm, waga: 14,14g.</p>
+      <p>Cena: <span class="old_price">700 sek</span> <span class="new_price">550 sek</span></p>
       <hr id="silver_separator">
 
       <h4>11. 10 złotych 2017, Żołnierze Niezłomni, Witold Pilecki ps. „Witold”
@@ -739,7 +767,8 @@
           <img class="bigphoto" src="images/pilecki_silver_c.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: 15.000, Stop: Ag 925 , Średnica: 32,00 mm, waga: 14,14g.<br>Cena: 700 sek</p>
+      <p>Nakład: 15.000, Stop: Ag 925 , Średnica: 32,00 mm, waga: 14,14g.</p>
+      <p>Cena: <span class="old_price">800 sek</span> <span class="new_price">650 sek</span></p>
       <hr id="silver_separator">
 
       <h4>12. Australia 1$, Rok psa 2018
@@ -754,7 +783,8 @@
           <img class="bigphoto" src="images/dog1_silver_b.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: –, Stop: Ag 999.9 , Średnica: 45.60 mm, waga: 31,10g.<br>Cena: 550 sek</p>
+      <p>Nakład: –, Stop: Ag 999.9 , Średnica: 45.60 mm, waga: 31,10g.</p>
+      <p>Cena: 550 sek</p>
       <hr id="silver_separator">
 
       <h4>13. Australia 1$, Rok konia 2014
@@ -769,7 +799,8 @@
           <img class="bigphoto" src="images/horse1_silver_b.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: –, Stop: Ag 999.9 , Średnica: 45.60 mm, waga: 31,10g.<br>Cena: 650 sek</p>
+      <p>Nakład: –, Stop: Ag 999.9 , Średnica: 45.60 mm, waga: 31,10g.</p>
+      <p>Cena: 650 sek</p>
       <hr id="silver_separator">
 
       <h4>14. Australia 2$, Rok psa 2018
@@ -784,7 +815,8 @@
           <img class="bigphoto" src="images/dog2_silver_b.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: –, Stop: Ag 999.9 , Średnica: 55.60 mm, waga: 62,20g.<br>Cena: 1100 sek</p>
+      <p>Nakład: –, Stop: Ag 999.9 , Średnica: 55.60 mm, waga: 62,20g.</p>
+      <p>Cena: 1100 sek</p>
       <hr id="silver_separator">
 
       <h4>15. Kolekcja 24 szt. Jan Paweł II
@@ -803,7 +835,8 @@
           <img class="bigphoto" src="images/24pope_silver_c.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: -, Stop: Ag 500 , Średnica: 34,00 mm, waga: 24 * 15g.<br>Cena: 4500 sek</p>
+      <p>Nakład: -, Stop: Ag 500 , Średnica: 34,00 mm, waga: 24 * 15g.</p>
+      <p>Cena: <span class="old_price">7000 sek</span> <span class="new_price">4500 sek</span></p>
       <hr id="silver_separator">
     </div>
   </div>
