--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
 
   <h5 id="welcome-text">Metale szlachetne to doskonała inwestycja,<br>a także ciekawy prezent na wyjątkowe
-    okazje.<br>Średnia roczna stopa zwrotu z ostatnich 20 lat<br>wyniosła aż 10% rocznie. Jest to więc prezent,<br>który
+    okazje.<br>Średnia roczna stopa zwrotu z ostatnich 20 lat<br>wyniosła aż 10%. Jest to więc prezent, który<br>
     dodatkowo zaprocentuje w przyszłości.<br>Pierwsza Komunia Święta, chrzest, ślub,<br>urodziny - to
     okoliczności, które sprzyjają<br>ofiarowaniu prezentu ekskluzywnego.<br>Zapraszam do kontaktu.</h5>
   <h5 id="welcome_message" class="new_price animate-flicker">Uwaga. Wyprzedaż świąteczna!</h5>
@@ -440,7 +440,7 @@
         </div>
       </div>
       <p>Nakład: 500, Stop: Au 999, Średnica: 21 mm, waga: 7,78g.</p>
-      <p>Cena: 6000 sek</p>
+      <p>Cena: 5700 sek <span class="new_price">Jedyna w internecie!</span></p>
       <hr id="small_separator">
 
       <h4>15. Złota Moneta 100 zł Roman Dmowski 2017</h4>
