--- a/index.html
+++ b/index.html
@@ -874,6 +874,15 @@
 
     gtag('config', 'UA-177288822-1');
   </script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-DEBV7H94DE"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-DEBV7H94DE');
+  </script>
 
 </body>
 
