--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     okazje.<br>Średnia roczna stopa zwrotu z ostatnich 20 lat<br>wyniosła aż 10%. Jest to więc prezent, który<br>
     dodatkowo zaprocentuje w przyszłości.<br>Pierwsza Komunia Święta, chrzest, ślub,<br>urodziny - to
     okoliczności, które sprzyjają<br>ofiarowaniu prezentu ekskluzywnego.<br>Zapraszam do kontaktu.</h5>
-  <h5 id="welcome_message" class="new_price animate-flicker">Uwaga. Wyprzedaż świąteczna!</h5>
+  <!--<h5 id="welcome_message" class="new_price animate-flicker">Uwaga. Wyprzedaż świąteczna!</h5>-->
 
   <div class="main">
     <div class="container section-gold">
@@ -320,7 +320,7 @@
         </div>
       </div>
       <p>Nakład: 60.000, Stop: Au 900, Średnica: 16 mm, waga: 1,7g.</p>
-      <p>Cena: <span class="old_price">1500 sek</span> <span class="new_price">1300 sek</span></p>
+      <p>Cena: <span class="old_price">1600 sek</span> <span class="new_price">1400 sek</span></p>
       <hr id="small_separator">
 
       <!--<h4>12. Australijski Kangur 1/10 uncji złota</h4>
@@ -425,7 +425,8 @@
       <div class="row">
         <div class="col-1">
           <img class="photo" src="images/dmowski_gold_a.jpg" alt="image">
-          <img class="bigphoto" src="images/dmowski_gold_a.jpg" alt="image"> </div>
+          <img class="bigphoto" src="images/dmowski_gold_a.jpg" alt="image">
+        </div>
         <div class="col-1">
           <img class="photo" src="images/dmowski_gold_b.jpg" alt="image">
           <img class="bigphoto" src="images/dmowski_gold_b.jpg" alt="image">
@@ -447,7 +448,8 @@
       <div class="row">
         <div class="col-1">
           <img class="photo" src="images/100dmowski_gold_a.jpg" alt="image">
-          <img class="bigphoto" src="images/100dmowski_gold_a.jpg" alt="image"> </div>
+          <img class="bigphoto" src="images/100dmowski_gold_a.jpg" alt="image">
+        </div>
         <div class="col-1">
           <img class="photo" src="images/100dmowski_gold_b.jpg" alt="image">
           <img class="bigphoto" src="images/100dmowski_gold_b.jpg" alt="image">
@@ -465,7 +467,8 @@
       <div class="row">
         <div class="col-1">
           <img class="photo" src="images/7_cudow_gold_a.jpg" alt="image">
-          <img class="bigphoto" src="images/7_cudow_gold_a.jpg" alt="image"> </div>
+          <img class="bigphoto" src="images/7_cudow_gold_a.jpg" alt="image">
+        </div>
         <div class="col-1">
           <img class="photo" src="images/7_cudow_gold_b.jpg" alt="image">
           <img class="bigphoto" src="images/7_cudow_gold_b.jpg" alt="image">
@@ -475,15 +478,16 @@
           <img class="bigphoto" src="images/7_cudow_gold_c.jpg" alt="image">
         </div>
       </div>
-      <p>Nakład: –, Stop: Au 999, Średnica: 16 mm, waga: 7 * 1g.<b /p>
-          <pr>Cena: 7100 sek</p>
+      <p>Nakład: –, Stop: Au 999, Średnica: 16 mm, waga: 7 * 1g. </p>
+      <p>Cena: 7100 sek</p>
       <hr id="small_separator">
 
       <h4>17. Złota Moneta 200 zł Jan Paweł II - 20-lecie pontyfikatu 1998</h4>
       <div class="row">
         <div class="col-1">
           <img class="photo" src="images/200zl_JPII1998_gold_a.jpg" alt="image">
-          <img class="bigphoto" src="images/200zl_JPII1998_gold_a.jpg" alt="image"> </div>
+          <img class="bigphoto" src="images/200zl_JPII1998_gold_a.jpg" alt="image">
+        </div>
         <div class="col-1">
           <img class="photo" src="images/200zl_JPII1998_gold_b.jpg" alt="image">
           <img class="bigphoto" src="images/200zl_JPII1998_gold_b.jpg" alt="image">
@@ -494,7 +498,8 @@
         </div>
       </div>
       <p>Nakład: 5.000, Stop: Au 900, Średnica: 27 mm, waga: 1/2 oz.</p>
-      <p>Cena: <span class="old_price">11000 sek</span> <span class="new_price">10000 sek</span></p>
+      <p>Cena: 10300 sek</p>
+      <!--<p>Cena: <span class="old_price">11000 sek</span> <span class="new_price">10000 sek</span></p>-->
       <hr id="small_separator">
 
 
@@ -748,7 +753,7 @@
         </div>
       </div>
       <p>Nakład: 17.000, Stop: Ag 925 , Średnica: 32,00 mm, waga: 14,14g.</p>
-      <p>Cena: <span class="old_price">700 sek</span> <span class="new_price">550 sek</span></p>
+      <p>Cena: 600 sek</p>
       <hr id="silver_separator">
 
       <h4>11. 10 złotych 2017, Żołnierze Niezłomni, Witold Pilecki ps. „Witold”
@@ -768,7 +773,7 @@
         </div>
       </div>
       <p>Nakład: 15.000, Stop: Ag 925 , Średnica: 32,00 mm, waga: 14,14g.</p>
-      <p>Cena: <span class="old_price">800 sek</span> <span class="new_price">650 sek</span></p>
+      <p>Cena: 700 sek</p>
       <hr id="silver_separator">
 
       <h4>12. Australia 1$, Rok psa 2018
@@ -836,7 +841,7 @@
         </div>
       </div>
       <p>Nakład: -, Stop: Ag 500 , Średnica: 34,00 mm, waga: 24 * 15g.</p>
-      <p>Cena: <span class="old_price">7000 sek</span> <span class="new_price">4500 sek</span></p>
+      <p>Cena: 5100 sek</p>
       <hr id="silver_separator">
     </div>
   </div>
